--- a/app/styles/css-partials/navbar-custom.scss
+++ b/app/styles/css-partials/navbar-custom.scss
@@ -136,13 +136,12 @@
     position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 50;
   background: rgba(255,255,255,0.95);
 }
 
 #menu-icon-o, #menu-icon-c{
     color: $navbar-text;
-
 }
 
 #menu-items{
@@ -175,6 +174,31 @@
   }
 }
 
+#menu-button {
+    cursor: pointer;
+    position: absolute;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    color: #fff;
+    //border: 3px solid #000;
+    display: none;
+    text-align: center;
+    height: 30px;
+    width: 30px;
+    @include border-radius (25px);
+    //font-size: 1.625rem;
+    //padding-top: 4px;
+    z-index: 52;
+    //box-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
+    font-size:2.0rem;
+    @include text-shadow (1px 1px 1px rgba(0, 0, 0, 0.4));
+}
+
+#menu-button:hover {
+    color: #eee;
+    @include text-shadow (1px 1px 2px rgba(0, 0, 0, 0.7));
+}
 
 #navbar-g.navbar-default .navbar-nav > li.yellow-highlight > a {
   font-weight: 600;
